# bST

./: .gitignore  CMakeLists.txt  README.md  bit_vector.hpp  hash_table.hpp  misc.hpp  multi_index.hpp  search.cpp  sig_generator.hpp  sig_size.hpp  sketch_trie.hpp  to_bvecs.cpp
data/: news20.scale_base.cws.bvecs  news20.scale_query.cws.bvecs
